Archive2/fb/e8856d94bfe1c6/output
main.cpp:20:14: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
  while(math = 1){
        ~~~~~^~~
main.cpp:20:14: note: place parentheses around the assignment to silence this warning
  while(math = 1){
             ^
        (       )
main.cpp:20:14: note: use '==' to turn this assignment into an equality comparison
  while(math = 1){
             ^
             ==
main.cpp:32:4: error: expected '}'
  }
   ^
main.cpp:8:1: note: to match this '{'
{
^
1 warning and 1 error generated.
